--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-* {
-  box-sizing: border-box;
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  overflow-x: hidden;
+* {
+    box-sizing: border-box;
 }
 
 .navbar {
